--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,8 @@
     "baseUrl": ".",
     "paths": {
       "*": ["./src/*"]
-    }
+    },
+    "types": ["jest"]
   },
   "ts-node": { "compilerOptions": { "module": "commonjs" } }
 }
