--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,8 @@
     "paths": {
       "*": ["./src/*"]
     },
-    "types": ["jest"]
+    "types": ["jest", "node"]
   },
-  "ts-node": { "compilerOptions": { "module": "commonjs" } }
+  "ts-node": { "compilerOptions": { "module": "commonjs" } },
+  "include": ["./config/jest/setupTests.ts", "./src/**/*.ts", "./src/**/*.tsx"]
 }
