--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,5 +1,4 @@
-name: testing, building
-run-name: ${{ github.actor }} is testing out GitHub Actions 🚀
+name: linting, testing, building
 on:
   push:
     branches: [master]
@@ -11,12 +10,13 @@ jobs:
     strategy:
       matrix:
         node-version: [17.x]
+
     steps:
       - uses: actions/checkout@v2
-      - name: Staring Node.js ${{ matrix.node-version}}
+      - name: Staring Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v1
         with:
-          node-version: ${{matrix.node-version}}
+          node-version: ${{ matrix.node-version }}
       - name: install modules
         run: npm install
       - name: build production project
