--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "main": "index.js",
   "scripts": {
     "start": "webpack serve --env port=3000",
+    "start:dev:server": "node ./json-server/index.js",
     "build:prod": "webpack --env mode=production",
     "build:dev": "webpack --env mode=development",
     "storybook": "start-storybook -p 6006 -c ./config/storybook",
@@ -67,7 +68,7 @@
     "identity-obj-proxy": "^3.0.0",
     "jest": "^27.5.1",
     "jiti": "^2.5.1",
-    "json-server": "^0.17.0",
+    "json-server": "^0.17.4",
     "loki": "^0.28.1",
     "mini-css-extract-plugin": "^2.5.3",
     "react-refresh": "^0.12.0",
