--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,21 +1,26 @@
 {
-  "compilerOptions": {
-    "outDir": "./dist/",
-    "noImplicitAny": true,
-    "module": "ESNext",
-    "target": "es5",
-    "jsx": "react-jsx",
-    "allowJs": true,
-    "strict": true,
-    "moduleResolution": "node",
-    "esModuleInterop": true,
-    "allowSyntheticDefaultImports": true,
-    "baseUrl": ".",
-    "paths": {
-      "*": ["./src/*"]
-    },
-    "types": ["jest", "node"]
-  },
-  "ts-node": { "compilerOptions": { "module": "commonjs" } },
-  "include": ["./config/jest/setupTests.ts", "./src/**/*.ts", "./src/**/*.tsx"]
+	"compilerOptions": {
+		"outDir": "./dist/",
+		"noImplicitAny": true,
+		"module": "ESNext",
+		"target": "es5",
+		"jsx": "react-jsx",
+		"allowJs": true,
+		"strict": true,
+		"moduleResolution": "node",
+		"esModuleInterop": true,
+		"allowSyntheticDefaultImports": true,
+		"baseUrl": ".",
+		"paths": {
+			"*": ["./src/*"]
+		},
+		"types": ["jest", "node"]
+	},
+	"ts-node": { "compilerOptions": { "module": "commonjs" } },
+	"include": [
+		"./config/jest/setupTests.ts",
+		"./src/**/*.ts",
+		"./src/**/*.tsx",
+		"src/entities/Article/model/services/fetchArticleById"
+	]
 }
